Fixed critical bugs: combat summary not working, inventory not dropping on death, block placing issues, implemented cooldown on gapples & enderpearl, implemented anti-elytra system